--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "build": "webpack --mode production",
     "lint:style": "stylelint **/*.{css,scss}",
-    "start": "webpack-dev-server"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open" // optional
   },
   "repository": {
     "type": "git",
