--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint:style": "stylelint **/*.{css,scss}",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open" // optional
+    "start": "webpack-dev-server --mode development --open"
   },
   "repository": {
     "type": "git",
